[gd_scene format=3 uid="uid://ciausysigjupo"]

[ext_resource type="Script" uid="uid://ca278qfl4j7ve" path="res://scripts/malware_gallery.gd" id="1_script"]

[node name="MalwareGallery" type="Control" unique_id=266087692]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="." unique_id=133381133]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.01, 0.02, 0.03, 1)

[node name="Title" type="Label" parent="." unique_id=1669801874]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = ":: DECRYPTING THREAT DATABASE ::"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="." unique_id=1304249965]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -140.0
offset_right = 460.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 25
columns = 4

[node name="Virus" type="Button" parent="GridContainer" unique_id=128096382]
custom_minimum_size = Vector2(210, 110)
layout_mode = 2
text = "[ ANALYZE VIRUS ]"

[node name="Ransomware" type="Button" parent="GridContainer" unique_id=1733889233]
custom_minimum_size = Vector2(210, 110)
layout_mode = 2
text = "[ ANALYZE RANSOM ]"

[node name="Trojan" type="Button" parent="GridContainer" unique_id=2096528797]
custom_minimum_size = Vector2(210, 110)
layout_mode = 2
text = "[ ANALYZE TROJAN ]"

[node name="Spyware" type="Button" parent="GridContainer" unique_id=2000599641]
custom_minimum_size = Vector2(210, 110)
layout_mode = 2
text = "[ ANALYZE SPYWARE ]"

[node name="InfoPanel" type="Panel" parent="." unique_id=1784105964]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -240.0
offset_right = 150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="DescriptionLabel" type="Label" parent="InfoPanel" unique_id=691499473]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 19
text = "Awaiting input from Security Officer..."
autowrap_mode = 3

[node name="level_up_image" type="TextureRect" parent="." unique_id=1117978969]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -317.0
offset_top = -301.0
offset_right = -48.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="BackButton" type="Button" parent="." unique_id=177901844]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = 90.0
grow_horizontal = 0
text = "EXIT TERMINAL"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
