extends Control

var malwares = {
	"Virus": {
		"title": "> [!] CRITICAL INFECTION: VIRUS",
		"desc": "A malicious software entity designed to proliferate by infiltrating legitimate host files. Once executed, it replicates its own code, corrupting system data and hijacking computational resources to ensure its survival across the network infrastructure.",
		"color": Color.INDIAN_RED,
		"bg_color": Color(0.1, 0.02, 0.02),
		"img": "res://assets/malware/virus.png",
		"shake": 6.0
	},
	"Ransomware": {
		"title": "> [!!!] SYSTEM HOSTAGE: RANSOMWARE",
		"desc": "An advanced cryptographic threat that weaponizes file encryption to deny user access. It performs a high-speed sweep of local and cloud storage, locking sensitive databases behind a unique AES-256 key, followed by a demand for digital currency payment.",
		"color": Color.CRIMSON,
		"bg_color": Color(0.3, 0.0, 0.0),
		"img": "res://assets/malware/ramsonware.png",
		"shake": 18.0
	},
	"Trojan": {
		"title": "> [?] BREACH DETECTED: TROJAN",
		"desc": "A deceptive delivery mechanism that masquerades as harmless utility software. By exploiting user trust, it establishes a covert backdoor within the security perimeter, allowing remote attackers to exfiltrate data or deploy secondary payloads without detection.",
		"color": Color.ORANGE,
		"bg_color": Color(0.12, 0.06, 0.0),
		"img": "res://assets/malware/trojan.png",
		"shake": 3.0
	},
	"Spyware": { 
		"title": "> [i] MONITORING ALERT: SPYWARE",
		"desc": "A stealth-oriented surveillance tool engineered for persistent data harvesting. It operates in the background to capture keystrokes, monitor browsing habits, and intercept audiovisual feeds, transmitting harvested intelligence to a remote Command & Control server.",
		"color": Color.GOLDENROD,
		"bg_color": Color(0.02, 0.1, 0.05),
		"img": "res://assets/malware/spyware.png",
		"shake": 0.0
	}
}

@onready var background = $Background
@onready var title_label = $Title
@onready var desc_label = $InfoPanel/DescriptionLabel
@onready var robot = %level_up_image

func _ready():
	# Configuración de tamaño para que no salgan enormes
	robot.custom_minimum_size = Vector2(200, 200) # Ajusta este número si las quieres más pequeñas aún
	robot.expand_mode = TextureRect.EXPAND_IGNORE_SIZE
	robot.stretch_mode = TextureRect.STRETCH_KEEP_ASPECT_CENTERED
	
	$InfoPanel.mouse_filter = Control.MOUSE_FILTER_IGNORE
	desc_label.mouse_filter = Control.MOUSE_FILTER_IGNORE
	robot.mouse_filter = Control.MOUSE_FILTER_IGNORE
	
	title_label.add_theme_color_override("font_color", Color(0, 1, 1))
	robot.pivot_offset = robot.size / 2
	
	for btn in $GridContainer.get_children():
		if btn is Button:
			btn.pivot_offset = btn.size / 2
			btn.pressed.connect(_on_malware_selected.bind(btn.name))

func _on_malware_selected(type: String):
	if malwares.has(type):
		var data = malwares[type]
		
		# Efectos de pantalla
		if data["shake"] > 0:
			apply_shake(data["shake"])
		
		var t = create_tween().set_parallel(true)
		t.tween_property(background, "color", data["bg_color"], 0.4)
		t.tween_property(title_label, "theme_override_colors/font_color", data["color"], 0.4)
		
		# Carga de imagen con el tamaño forzado
		if FileAccess.file_exists(data["img"]):
			robot.texture = load(data["img"])
		
		desc_label.add_theme_color_override("font_color", data["color"])
		var full_text = data["title"] + "\n\n" + data["desc"]
		var text_t = create_tween()
		text_t.tween_method(func(v): desc_label.text = full_text.left(v), 0, full_text.length(), 0.4)

func apply_shake(intensity: float):
	var t = create_tween()
	for i in range(8):
		var rand_pos = Vector2(randf_range(-intensity, intensity), randf_range(-intensity, intensity))
		t.tween_property(self, "position", rand_pos, 0.04)
	t.tween_property(self, "position", Vector2.ZERO, 0.04)

func _on_back_button_pressed():
	get_tree().change_scene_to_file("res://scenes/Desktop.tscn")
